# vendor-aml-subtitleserver

./: CMakeLists.txt  LICENSE  bak_Makefile
client/: AmSocketClient.cpp  AmSocketClient.h  AmSubtitle.cpp  AmSubtitle.h  CMakeLists.txt  SubtitleAPICommon.h  SubtitleClientLinux.cpp  SubtitleNativeAPI.cpp  SubtitleNativeAPI.h  SubtitleNativeAPIForC.h  SubtitleReportAPI.cpp  SubtitleReportAPI.h
client/include/: SubtitleClientLinux.h  subtitlecmd.h
libsubtitle/: CMakeLists.txt  ISubtitleCallback.cpp  ISubtitleCallback.h  ISubtitleServer.cpp  SubtitleServer.cpp  SubtitleServer.h  SubtitleService.cpp  SubtitleService.h  subtitleserver.rc
libsubtitle/display/: Display.cpp  Display.h
libsubtitle/include/: ISubtitleServer.h  IpcSocket.h  MediaSyncInterface.h  SubtitleType.h  subtitlecmd.h
libsubtitle/io/: DataSource.h  DataSourceFactory.cpp  DataSourceFactory.h  Demux.c  DemuxDriver.c  DemuxDriver.h  DemuxSource.cpp  DemuxSource.h  DeviceSource.cpp  DeviceSource.h  ExternalDataSource.cpp  ExternalDataSource.h  FileSource.cpp  FileSource.h  SocketSource.cpp  SocketSource.h  Userdata.c  UserdataDriver.c  UserdataDriver.h  VbiDriver.h  VbiSource.cpp  VbiSource.h
libsubtitle/ipc/: EventsTracker.h  FmqReader.h  FmqReceiver.cpp  FmqReceiver.h  IpcBuffer.cpp  IpcBuffer.h  IpcDataTypes.h  IpcSocket.cpp  SocketServer.cpp  SocketServer.h
libsubtitle/port/: trace_support.h
libsubtitle/subtitle/: InfoChangeListener.h  ParserEventNotifier.h  Presentation.cpp  Presentation.h  Subtitle.cpp  Subtitle.h
libsubtitle/subtitle/parser/: AribB24Parser.cpp  AribB24Parser.h  AssParser.cpp  AssParser.h  ClosedCaption.c  ClosedCaption.h  ClosedCaptionParser.cpp  ClosedCaptionParser.h  DvbCommon.h  DvbParser.cpp  DvbParser.h  DvdParser.cpp  DvdParser.h  Parser.h  ParserFactory.cpp  ParserFactory.h  PgsParser.cpp  PgsParser.h  Scte27Parser.cpp  Scte27Parser.h  SmpteTtmlParser.cpp  SmpteTtmlParser.h  TeletextParser.cpp  TeletextParser.h  TtmlParser.cpp  TtmlParser.h  UserDataAfd.cpp  UserDataAfd.h  bprint.c  bprint.h  dvbCommon.h  list.h  streamUtils.h  sub_types.h  sub_types2.h
libsubtitle/subtitle/parser/ExtParser/: Aqtitle.cpp  Aqtitle.h  ExtParser.cpp  ExtParser.h  ExtParserEbuttd.cpp  ExtParserEbuttd.h  ExtSubFactory.cpp  ExtSubFactory.h  ExtSubStreamReader.cpp  ExtSubStreamReader.h  Jacosub.cpp  Jacosub.h  Lyrics.cpp  Lyrics.h  Mircodvd.cpp  Mircodvd.h  Mplayer1.cpp  Mplayer1.h  Mplayer2.cpp  Mplayer2.h  Mpsub.cpp  Mpsub.h  Pjs.cpp  Pjs.h  RealText.cpp  RealText.h  Sami.cpp  Sami.h  StreamReader.cpp  StreamReader.h  SubStationAlpha.cpp  SubStationAlpha.h  SubViewer.cpp  SubViewer.h  SubViewer2.cpp  SubViewer2.h  SubViewer3.cpp  SubViewer3.h  Subrip.cpp  Subrip.h  (+14 more)
libsubtitle/subtitle/parser/dvb/am_adp/am_dmx/: am_dmx.c
libsubtitle/subtitle/parser/dvb/am_adp/am_dmx/linux_dvb/: linux_dvb.c
libsubtitle/subtitle/parser/dvb/am_adp/am_evt/: am_evt.c
libsubtitle/subtitle/parser/dvb/am_adp/am_misc/: am_adplock.c  am_iconv.c  am_misc.c  am_sig_handler.c  am_thread.c
libsubtitle/subtitle/parser/dvb/am_adp/am_time/: am_time.c
libsubtitle/subtitle/parser/dvb/am_adp/am_userdata/: am_userdata.c  am_userdata_internal.h
libsubtitle/subtitle/parser/dvb/am_adp/am_userdata/aml/: aml.c
libsubtitle/subtitle/parser/dvb/am_mw/am_cc/: am_cc.c  am_cc_internal.h  am_cc_userdata.c  cc_json.c
libsubtitle/subtitle/parser/dvb/am_mw/am_scte27/: am_scte27.c
libsubtitle/subtitle/parser/dvb/android/ndk/include/: tvin_vbi.h
libsubtitle/subtitle/parser/dvb/include/am_adp/: am_adp_internal.h  am_cond.h  am_config.h  am_debug.h  am_dmx.h  am_dmx_internal.h  am_evt.h  am_iconv.h  am_list.h  am_misc.h  am_osd.h  am_pes.h  am_thread.h  am_time.h  am_types.h  am_userdata.h  am_userdata_internal.h  am_util.h
libsubtitle/subtitle/parser/dvb/include/am_mw/: am_cc.h  am_scte27.h
libsubtitle/subtitle/render/: AndroidHidlRemoteRender.cpp  AndroidHidlRemoteRender.h  Render.h  SkiaRender.cpp  SkiaRender.h
libsubtitle/subtitle/render/directfbrender/: DFBDevice.cpp  DFBDevice.h  DFBRect.h  DFBRender.cpp  DFBRender.h
libsubtitle/subtitle/render/framebufferrender/: FBDevice.cpp  FBDevice.h  FBRect.h  FBRender.cpp  FBRender.h
libsubtitle/subtitle/render/textrender/: core.h  draw_context.cpp  draw_context.h  font.h  rectangle.cpp  shape.cpp  shape.h  text.cpp
libsubtitle/subtitle/render/textrender/cairo/: cairo.h
libsubtitle/subtitle/render/waylandrender/: WLGLDevice.cpp  WLGLDevice.h  WLRect.h  WLRender.cpp  WLRender.h
libsubtitle/subtitle/render/waylandrender/textrender/: bounding_box.h  color.h  core.h  draw_context.cpp  draw_context.h  font.h  pen.cpp  pen.h  rectangle.cpp  rectangle.h  round_rectangle.cpp  round_rectangle.h  shape.cpp  shape.h  surface.cpp  surface.h  text.cpp  text.h
libsubtitle/subtitle/render/waylandrender/wayland_inc/: wayland-server-protocol.h
libsubtitle/utils/: AmlogicEvent.c  AmlogicEvent.h  AmlogicTime.c  AmlogicTime.h  AmlogicUtil.c  AmlogicUtil.h  AndroidCallbackMessageQueue.cpp  AndroidCallbackMessageQueue.h  BlockChannel.h  CCJsonParser.cpp  CCJsonParser.h  ClosedCaptionJson.c  ClosedCaptionJson.h  ExtParserUtils.cpp  ExtParserUtils.h  MemoryLeakTrackUtil.cpp  MemoryLeakTrackUtil.h  Segment.cpp  Segment.h  SubtitleLog.h  SubtitleSignalHandler.cpp  SubtitleSignalHandler.h  SubtitleTypes.h  VideoInfo.cpp  VideoInfo.h  Watchdog.cpp  Watchdog.h  bprint.c  bprint.h  cJSON.c  cJSON.h  list.h  ringbuffer.c  ringbuffer.h
service/: CMakeLists.txt  SubtitleServiceLinux.cpp  SubtitleServiceLinux.h  main_subtitleservice.cpp
test/: main_subtitletest.cpp
